@@ -1,0 +1,1 @@
+portal_properties | print
