@@ -1,3 +1,6 @@
+2007-08-13 jerome
+* Add a global print action
+
 2006-05-12 jerome
 * remove debug info in generated XML by listbox macro
 
